--- a/e3-parent/e3-manager/pom.xml
+++ b/e3-parent/e3-manager/pom.xml
@@ -16,7 +16,7 @@
         <module>e3-manager-dao</module>
         <module>e3-manager-interface</module>
         <module>e3-manager-service</module>
-        <module>e3-manager-web</module>
+        <!--<module>e3-manager-web</module>-->
     </modules>
     <!--<modules>-->
         <!--<module>e3-manager-pojo</module>-->
